Add reverse connections, and try some highlighting code. Not sure how much of this is being kept.
